--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@ footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; m
     <div style="font-size: 22px; font-weight: 600; margin-bottom: 15px; cursor: pointer; display: flex; justify-content: space-between; align-items: center;">
       <span>Mô Tả</span>
     </div>
-    <div class="description-text" id="descriptionText">
-      Gọi Rồng Online - Trải nghiệm game nhập vai cực kỳ hấp dẫn với các tính năng: săn rồng, luyện thú, chiến đấu PvP và kết bạn trong thế giới rộng lớn. Tham gia ngay và trở thành huyền thoại!
+    <div class="description-text" id="descriptionText">Gọi Rồng Online - Trải nghiệm game nhập vai cực kỳ hấp dẫn với các tính năng: săn rồng, luyện thú, chiến đấu PvP và kết bạn trong thế giới rộng lớn. Tham gia ngay và trở thành huyền thoại!
     </div>
   </div>
   <!-- Nhà phát triển -->
@@ -129,7 +128,6 @@ footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; m
       <span>
         <div id="developerName"><a href="https://goirong.vip">Gọi Rồng VIP</a></div>
       </span>
-      <span>›</span>
     </a>
     <div class="developer-label">Nhà Phát Triển</div>
   </div>
