--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; m
     <div style="font-size: 22px; font-weight: 600; margin-bottom: 15px; cursor: pointer; display: flex; justify-content: space-between; align-items: center;">
       <span>Mô Tả</span>
     </div>
-    <div class="description-text" id="descriptionText">Gọi Rồng Online - Trải nghiệm game nhập vai cực kỳ hấp dẫn với các tính năng: săn rồng, luyện thú, chiến đấu PvP và kết bạn trong thế giới rộng lớn. Tham gia ngay và trở thành huyền thoại!
+    <div class="description-text" id="descriptionText">Gọi Rồng Online - Trải nghiệm game nhập vai cực kỳ hấp dẫn với các tính năng: săn boss, nâng cấp, luyện tập, chiến đấu PvP và kết bạn trong thế giới rộng lớn. Tham gia ngay và trở thành huyền thoại!
     </div>
   </div>
   <!-- Nhà phát triển -->
