--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-
 .app-icon { width: 120px; height: 120px; border-radius: 26px; background: #f5f5f7; display: flex; align-items: center; justify-content: center; overflow: hidden; flex-shrink: 0; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
 .app-icon img { width: 100%; height: 100%; object-fit: contain; }
 .app-info { flex: 1; display: flex; flex-direction: column; gap: 8px; }
-.app-title { font-size: 34px; font-weight: 700; color: #1d1d1f; line-height: 1.2; }
+.app-title { font-size: 20px; font-weight: 700; color: #1d1d1f; line-height: 1.2; }
 .app-subtitle { font-size: 21px; color: #86868b; font-weight: 400; }
 .install-section { display: flex; align-items: center; gap: 12px; margin-top: 12px; }
 .install-btn { display: inline-block; padding: 10px 20px; background: #007AFF; color: white; text-decoration: none; border-radius: 20px; font-size: 17px; font-weight: 600; transition: all 0.2s; min-width: 100px; text-align: center; }
@@ -30,11 +30,11 @@ body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-
 .stat-value { font-size: 21px; color: #1d1d1f; font-weight: 600; }
 .stat-subvalue { font-size: 13px; color: #86868b; margin-top: 2px; }
 /* Screenshots */
-.screenshots-section { padding: 0 20px; border-bottom: 1px solid #e5e5e7; margin-top: 20px; }
+.screenshots-section {border-bottom: 1px solid #e5e5e7;}
 .screenshot-main { position: relative; margin-bottom: 15px; }
-.screenshot-frame { border-radius: 20px; overflow: hidden; background: #000; position: relative; box-shadow: 0 8px 24px rgba(0,0,0,0.15); }
+.screenshot-frame { border-radius: 8px; overflow: hidden; background: #000; position: relative; box-shadow: 0 8px 24px rgba(0,0,0,0.15); }
 .screenshot-frame img { width: 100%; height: auto; display: block; }
-.screenshot-nav { position: absolute; top: 50%; transform: translateY(-50%); background: rgba(0,0,0,0.5); color: white; border: none; width: 44px; height: 44px; border-radius: 50%; cursor: pointer; font-size: 20px; display: flex; align-items: center; justify-content: center; transition: all 0.2s; z-index: 10; }
+.screenshot-nav { position: absolute; top: 50%; transform: translateY(-50%); background: rgba(0,0,0,0.5); color: white; border: none; width: 30px; height: 30px; border-radius: 50%; cursor: pointer; font-size: 20px; display: flex; align-items: center; justify-content: center; transition: all 0.2s; z-index: 10; }
 .screenshot-nav:hover { background: rgba(0,0,0,0.7); }
 .screenshot-nav.prev { left: 10px; }
 .screenshot-nav.next { right: 10px; }
