--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cài Đặt App Gọi Rồng Online</title>
+<title>Tải Gọi Rồng Online cho IOS</title>
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; }
 body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background: #f5f5f7; min-height: 100vh; padding: 0; }
@@ -156,7 +156,7 @@ function shareApp() {
   if (navigator.share) {
     navigator.share({
       title: document.getElementById('appName').textContent,
-      text: 'Cài đặt ứng dụng này',
+      text: 'Chơi Gọi Rồng cùng tôi trên IOS',
       url: window.location.href
     });
   } else {
