--- a/index.html
+++ b/index.html
@@ -1,14 +1,170 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html>
 <head>
 <meta charset="UTF-8">
-<title>Gọi Rồng Online</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tải Gọi Rồng Online cho IOS</title>
+<style>
+* { margin: 0; padding: 0; box-sizing: border-box; }
+body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background: #f5f5f7; min-height: 100vh; padding: 0; }
+.container { max-width: 980px; margin: 0 auto; padding: 0 20px; background: white; }
+/* Header giống App Store */
+.app-header { background: white; padding: 20px 0; border-bottom: 1px solid #e5e5e7; }
+.app-header-content { display: flex; align-items: flex-start; gap: 20px; padding: 0 20px; }
+.app-icon { width: 120px; height: 120px; border-radius: 26px; background: #f5f5f7; display: flex; align-items: center; justify-content: center; overflow: hidden; flex-shrink: 0; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+.app-icon img { width: 100%; height: 100%; object-fit: contain; }
+.app-info { flex: 1; display: flex; flex-direction: column; gap: 8px; }
+.app-title { font-size: 20px; font-weight: 700; color: #1d1d1f; line-height: 1.2; }
+.app-subtitle { font-size: 21px; color: #86868b; font-weight: 400; }
+.install-section { display: flex; align-items: center; gap: 12px; margin-top: 12px; }
+.install-btn { display: inline-block; padding: 10px 20px; background: #007AFF; color: white; text-decoration: none; border-radius: 20px; font-size: 17px; font-weight: 600; transition: all 0.2s; min-width: 100px; text-align: center; }
+.install-btn:hover { background: #0051D5; }
+.in-app-purchase { font-size: 13px; color: #86868b; }
+.share-btn { margin-left: auto; width: 44px; height: 44px; border-radius: 50%; background: transparent; border: none; display: flex; align-items: center; justify-content: center; cursor: pointer; color: #007AFF; font-size: 20px; }
+.share-btn:hover { background: #f5f5f7; }
+.app-stats { display: grid; grid-template-columns: repeat(4, 1fr); background: #f5f5f7; border-radius: 12px; overflow: hidden; margin-top: 15px; }
+/* Thông số */
+.stat-item { position: relative; text-align: center; padding: 12px 8px; }
+.stat-item:not(:last-child)::after { content: ""; position: absolute; right: 0; top: 50%; width: 2px; height: 40%; background: #d1d1d6; transform: translateY(-50%); border-radius: 2px; }
+.stat-label { font-size: 13px; color: #86868b; font-weight: 500; text-transform: uppercase; letter-spacing: 0.5px; }
+.stat-value { font-size: 21px; color: #1d1d1f; font-weight: 600; }
+.stat-subvalue { font-size: 13px; color: #86868b; margin-top: 2px; }
+/* Screenshots */
+.screenshots-section {border-bottom: 1px solid #e5e5e7;}
+.screenshot-main { position: relative; margin-bottom: 15px; }
+.screenshot-frame { border-radius: 8px; overflow: hidden; background: #000; position: relative; box-shadow: 0 8px 24px rgba(0,0,0,0.15); }
+.screenshot-frame img { width: 100%; height: auto; display: block; }
+.screenshot-nav { position: absolute; top: 50%; transform: translateY(-50%); background: rgba(0,0,0,0.5); color: white; border: none; width: 30px; height: 30px; border-radius: 50%; cursor: pointer; font-size: 20px; display: flex; align-items: center; justify-content: center; transition: all 0.2s; z-index: 10; }
+.screenshot-nav:hover { background: rgba(0,0,0,0.7); }
+.screenshot-nav.prev { left: 10px; }
+.screenshot-nav.next { right: 10px; }
+.screenshot-nav.hidden { display: none; }
+/* Mô tả */
+.description-section { padding: 0 20px; border-bottom: 1px solid #e5e5e7; margin-top: 20px; }
+.description-text { font-size: 17px; line-height: 1.5; color: #1d1d1f; white-space: pre-wrap; }
+/* Nhà phát triển */
+.developer-section { padding: 20px; border-bottom: 1px solid #e5e5e7; }
+.developer-link { display: flex; align-items: center; justify-content: space-between; text-decoration: none; color: #007AFF; font-size: 17px; font-weight: 600; }
+.developer-link:hover { text-decoration: underline; }
+.developer-label { color: #86868b; font-size: 13px; margin-top: 4px; }
+/* Hướng dẫn cài đặt */
+.instructions-section { padding: 10px; background: #c3c3c5; border-radius: 5px; margin-bottom: 10px; }
+.instructions-title { font-size: 22px; font-weight: 700; margin-bottom: 20px; color: #1d1d1f; }
+.instructions-list { list-style: none; counter-reset: step-counter; }
+.instructions-list li { counter-increment: step-counter; margin-bottom: 15px; padding-left: 40px; position: relative; font-size: 16px; line-height: 1.6; color: #1d1d1f; }
+.instructions-list li::before { content: counter(step-counter); position: absolute; left: 0; top: 0; width: 28px; height: 28px; background: #007AFF; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: 600; font-size: 14px; }
+footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; margin-top: 20px; }
+</style>
 </head>
 <body>
-<h1>Gọi Rồng Online</h1>
-<a href="itms-services://?action=download-manifest&url=https://rongchien2025.github.io/ios-install/manifest.plist">
-<button>Cài App</button>
-</a>
-<p>Mở trang này bằng Safari trên iPhone/iPad để cài đặt.</p>
+<div class="container">
+  <!-- Header giống App Store -->
+  <div class="app-header">
+    <div class="app-header-content">
+      <div class="app-icon" id="appIcon"><img src="https://goirong.vip/Assets/android-chrome-192x192.png" alt="Gọi Rồng Online"></div>
+      <div class="app-info">
+        <div class="app-title" id="appName">Gọi Rồng Online</div>
+        <div class="install-section">
+          <a href="itms-services://?action=download-manifest&url=https://rongchien2025.github.io/ios-install/manifest.plist" id="installBtn" class="install-btn"> Cài Đặt </a>
+          <button class="share-btn" onclick="shareApp()" title="Chia sẻ">↗</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Thông tin app - 4 cột -->
+  <div class="app-stats" id="appStats">
+    <div class="stat-item" id="langStat">
+      <div class="stat-label">Ngôn Ngữ</div>
+      <div class="stat-value" id="langValue">VI</div>
+    </div>
+    <div class="stat-item" id="ageStat">
+      <div class="stat-label">Độ Tuổi</div>
+      <div class="stat-value" id="ageValue">7+</div>
+    </div>
+    <div class="stat-item" id="sizeStat">
+      <div class="stat-label">Kích cỡ</div>
+      <div class="stat-value" id="sizeValue">110 MB</div>
+    </div>
+    <div class="stat-item" id="categoryStat">
+      <div class="stat-label">Thể Loại</div>
+      <div class="stat-value" id="categoryValue">Nhập vai</div>
+    </div>
+  </div>
+  <!-- Hướng dẫn cài đặt -->
+  <div class="instructions-section">
+    <div class="instructions-title">Hướng Dẫn Cài Đặt</div>
+    <ol class="instructions-list">
+      <li>Đảm bảo bạn đang sử dụng thiết bị iOS (iPhone/iPad)</li>
+      <li>Nhấn nút "Cài Đặt" ở trên</li>
+      <li>Cho phép cài đặt khi được hỏi</li>
+      <li>Vào <strong>Cài Đặt → Cài Đặt Chung → Quản Lý VPN & Thiết Bị</strong></li>
+      <li>Chọn chứng chỉ nhà phát triển</li>
+      <li>Nhấn <strong>"Tin Cậy"</strong></li>
+      <li>Quay về màn hình chính và mở ứng dụng</li>
+      <li>Đối với IOS 16+ cần khởi động lại điện thoại</li>
+    </ol>
+  </div>
+  <!-- Screenshots -->
+  <div class="screenshots-section" id="screenshotsSection">
+    <div class="screenshot-main">
+      <button class="screenshot-nav prev" id="prevScreenshot" onclick="changeScreenshot(-1)">‹</button>
+      <div class="screenshot-frame">
+        <img id="mainScreenshot" src="https://goirong.vip/Assets/review/seo1.png" alt="Ảnh Chụp Màn Hình">
+      </div>
+      <button class="screenshot-nav next" id="nextScreenshot" onclick="changeScreenshot(1)">›</button>
+    </div>
+  </div>
+  <!-- Mô tả -->
+  <div class="description-section" id="descriptionSection">
+    <div style="font-size: 22px; font-weight: 600; margin-bottom: 15px; cursor: pointer; display: flex; justify-content: space-between; align-items: center;">
+      <span>Mô Tả</span>
+    </div>
+    <div class="description-text" id="descriptionText">Gọi Rồng Online - Trải nghiệm game nhập vai cực kỳ hấp dẫn với các tính năng: săn boss, nâng cấp, luyện tập, chiến đấu PvP và kết bạn trong thế giới rộng lớn. Tham gia ngay và trở thành huyền thoại!
+    </div>
+  </div>
+  <!-- Nhà phát triển -->
+  <div class="developer-section" id="developerSection">
+    <a class="developer-link" id="developerLink">
+      <span>
+        <div id="developerName"><a href="https://goirong.vip">Gọi Rồng VIP</a></div>
+      </span>
+    </a>
+    <div class="developer-label">Nhà Phát Triển</div>
+  </div>
+  <footer>
+    <p>&copy; 2025 <b><a href="/"></a></b>. Bảo lưu mọi quyền.</p>
+  </footer>
+</div>
+<script>
+let screenshots = [
+  "https://goirong.vip/Assets/review/seo2.png",
+  "https://goirong.vip/Assets/review/seo3.png",
+  "https://goirong.vip/Assets/review/seo4.png",
+  "https://goirong.vip/Assets/review/seo5.png",
+  "https://goirong.vip/Assets/review/seo6.png",
+  "https://goirong.vip/Assets/review/seo7.png"
+];
+let currentScreenshot = 0;
+function changeScreenshot(direction) {
+  currentScreenshot += direction;
+  if(currentScreenshot < 0) currentScreenshot = screenshots.length - 1;
+  if(currentScreenshot >= screenshots.length) currentScreenshot = 0;
+  document.getElementById('mainScreenshot').src = screenshots[currentScreenshot];
+}
+
+function shareApp() {
+  if (navigator.share) {
+    navigator.share({
+      title: document.getElementById('appName').textContent,
+      text: 'Chơi Gọi Rồng cùng tôi trên IOS',
+      url: window.location.href
+    });
+  } else {
+    navigator.clipboard.writeText(window.location.href).then(() => {
+      alert('Đã sao chép liên kết!');
+    });
+  }
+}
+</script>
 </body>
 </html>
