--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ footer { background: #1d1d1f; color: white; text-align: center; padding: 1rem; m
       <li>Chọn chứng chỉ nhà phát triển</li>
       <li>Nhấn <strong>"Tin Cậy"</strong></li>
       <li>Quay về màn hình chính và mở ứng dụng</li>
-      <li>Đối với IOS 16+ cần khởi động lại điện thoại</li>
+      <li>Đối với IOS 16+ cần cho phép và khởi động lại</li>
     </ol>
   </div>
   <!-- Screenshots -->
